2011-07-31 Theodor Nolte <nolte_t@{informatik.}haw-hamburg.de>

        * About,Anleitung, symbolic link haw2iCalendar: removed
        * texts.py: new, Contains text from About and Anleitung
        * klickiBunti.py: Now uses texts.py instead of About and Anleitung.
         And also don't uses klickiBunti.xrc anymore. So 'pyinstaller' is
         feasable to create a single binary file containing all needed
         contents.

2011-07-26 Theodor Nolte <nolte_t@{informatik.}haw-hamburg.de>

        * klickiBunti.{py,xrc}: new
          A real (wxpython) gui for mices.
        * controller.py(setOutfile,getInfoString,optimalGruppenKeyIndex): new,
          used from the new gui KlickiBunti.
        * Anleitung,About: new, used from the new gui KlickiBunti.

        * hawModel/hawDispatchProcessor.py,hawModel/hawParser.py,
          hawModel/hawParserTest.py,hawModel/veranstaltungen/veranstaltungenParser.py,
          hawModel/veranstaltungen/veranstaltungenParserTest.py:
         Several small changes to parse new formulations in the 1.10
         versions of the SoSe2011 text files (Inf and EuI).

2011-04-12 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * haw2iCalendar.py(__main__): A logfile 'haw2iCalendar.log' will
         only be created when warnings or errors (or failures) occur.
         Exceptions will be logged with stacktrace.

        * icalendar.py(IcalEvent.icalStr): Changed format for locations from
         'Rm. 1234' to 'Rm. 12.34'.

2011-04-05 Theodor Nolte <nolte_t AT informatik.haw-hamburg.de>

        * veranstaltungenParser.py: Several modifications to improve parsing
         of Sem_EuI.txt files (..L -> Labor .., TSE without any group,
         Tutorium and Verbundveranstaltung also added).
         Two 'special cases' of Semesterkürzel with to hyphens ('-') will be
         recognized now.
         This leads to several changes in:
        * veranstaltungenParserTest.py: see above